--- a/package.json
+++ b/package.json
@@ -4,25 +4,27 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
+    "server": "json-server --watch db.json --port 8080",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "14.1.1",
+    "next": "14.1.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
-    "@types/node": "^20.11.24",
-    "@types/react": "^18.2.61",
-    "@types/react-dom": "^18.2.19",
+    "@types/node": "^20.11.25",
+    "@types/react": "^18.2.64",
+    "@types/react-dom": "^18.2.21",
     "autoprefixer": "^10.4.18",
     "eslint": "^8.57.0",
-    "eslint-config-next": "14.1.1",
+    "eslint-config-next": "14.1.3",
+    "json-server": "1.0.0-alpha.23",
     "postcss": "^8.4.35",
     "tailwind-styled-components": "^2.2.0",
     "tailwindcss": "^3.4.1",
-    "typescript": "^5.3.3"
+    "typescript": "^5.4.2"
   }
 }
